--- a/src/app/components/custom-dropdown/custom-dropdown.component.html
+++ b/src/app/components/custom-dropdown/custom-dropdown.component.html
@@ -1,5 +1,5 @@
 <div class="btn-group w-100" dropdown>
-    <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-dark dropdown-toggle w-100"
+    <button id="button-basic" dropdownToggle type="button" class="btn btn-dark dropdown-toggle w-100"
         aria-controls="dropdown-basic">
         <span *ngIf="selectedOption!=null">{{ selectedOption }}</span>
         <span *ngIf="selectedOption==null">Select a value</span>
