--- a/src/app/components/custom-dropdown/custom-dropdown.component.css
+++ b/src/app/components/custom-dropdown/custom-dropdown.component.css
@@ -1,12 +1,36 @@
-ul{
+ul {
     max-height: 200px;
     overflow: auto;
     cursor: pointer;
 }
-.dropdown-item:focus, .dropdown-item:hover{
-    background-color:#0d6efd !important ;
-    color: white !important;
+
+.dropdown-item{
+    transition: background-color 0.2s;
 }
-.btn{
+
+.dropdown-item:focus, .dropdown-item:hover {
+    background-color: orange !important;
+    color: black;
+}
+
+.btn {
     height: 36px;
 }
+
+/****************************************************/
+/* Css from https://codepen.io/devstreak/pen/dMYgeO */
+.dropdown-menu::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+.dropdown-menu::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+.dropdown-menu::-webkit-scrollbar-thumb {
+    background-color: #F90;
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+}
+/****************************************************/
