--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,10 +1,41 @@
-.container{
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.container > *{
+.container>* {
     width: 40%;
+}
+
+.custom-bg {
+    background: linear-gradient(90deg, #ffc06a, #ffb04d, #ffa02f, #ff8e00, #c56f00, #8f5200);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.btn {
+    font-weight: bold;
+}
+
+.form-control {
+    border: 1px solid orange;
+}
+
+.form-control:focus {
+    border-color: rgb(255, 165, 0);
+    box-shadow: 0 0 0 0.25rem rgb(255 165 0 / 25%);
 }
