--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,33 +1,41 @@
-<app-header class="fixed-top"></app-header>
-<div class="bg-dark h-100 d-flex align-items-center">
-    <div class="col-12 col-md-6 col-lg-4 offset-md-3 offset-lg-4">
-        <div class="card">
-            <div class="card-body">
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" formControlName="username" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                            <div *ngIf="f.username.errors.required">Username is required</div>
-                        </div>
+<div class="min-vh-100 d-flex custom-bg">
+    <div class="card bg-transparent shadow col-12 col-sm-8 col-md-6 col-lg-4 mx-auto my-auto">
+        <div class="card-header px-5 py-3 bg-dark text-white">
+            <h1 class="m-2 text-center"><i class="fa fa-user-circle" aria-hidden="true"></i></h1>
+        </div>
+        <div class="card-body px-5 py-4 bg-white ">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <div class="form-group my-3">
+                    <label for="username">Username</label>
+                    <input type="text" formControlName="username" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                        <div *ngIf="f.username.errors.required">Username is required</div>
                     </div>
-                    <div class="form-group mt-4">
-                        <label for="password">Password</label>
-                        <input type="password" formControlName="password" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                            <div *ngIf="f.password.errors.required">Password is required</div>
-                            <div *ngIf="f.password.errors.pattern">At least 1 number, 1 Uppercase letter, 1 Lowercase
-                                letter and min 8 letters</div>
-                        </div>
+                </div>
+                <div class="form-group my-3">
+                    <label for="password">Password</label>
+                    <input type="password" formControlName="password" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                        <div *ngIf="f.password.errors.pattern">At least 1 number, 1 Uppercase letter, 1 Lowercase
+                            letter and min 8 letters</div>
                     </div>
-                    <button [disabled]="loading" class="btn btn-primary mt-5 w-100">
-                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                        Login
-                    </button>
-                    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
-                </form>
+                </div>
+                <button [disabled]="loading" class="btn btn-warning mt-5 w-100">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Login
+                </button>
+                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+            </form>
+        </div>
+        <div class="card-footer d-flex px-5 py-3 bg-light">
+            <div class="btn btn-dark" routerLink="/">
+                <i class="fa fa-chevron-left me-3" aria-hidden="true"></i>Back
+            </div>
+            <div class="ms-auto btn btn-primary" routerLink="/register">
+                Sign Up <i class="fa fa-user-plus ms-3" aria-hidden="true"></i>
             </div>
         </div>
     </div>
