--- a/src/app/components/myinfo/myinfo.component.css
+++ b/src/app/components/myinfo/myinfo.component.css
@@ -1,3 +1,12 @@
 main{
     margin-top: 95px;
 }
+
+.form-control{
+    border: 1px solid orange;
+}
+
+.form-control:focus{
+    border-color: rgb(255, 165, 0);
+    box-shadow: 0 0 0 0.25rem rgb(255 165 0 / 25%);
+}
