--- a/src/app/components/tables/table-genero/table-genero.component.html
+++ b/src/app/components/tables/table-genero/table-genero.component.html
@@ -1,5 +1,5 @@
 <div class="p-4">
-    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnewgenero()">Add New Genero</button>
+    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnewgenero()">Add Row</button>
     <!--Datatable with Genero Details-->
     <div class="table-responsive">
         <table class="table table-striped table-sm text-center" id="datatable">
@@ -15,7 +15,7 @@
                     <td scope="row">{{group.idGenero}}</td>
                     <td>{{group.nombre}}</td>
                     <td class="justify-content-around d-flex">
-                        <button class="btn btn-warning" (click)="editgenero(group.idGenero)"> <i class="fa fa-pencil"
+                        <button class="btn btn-success" (click)="editgenero(group.idGenero)"> <i class="fa fa-pencil"
                                 aria-hidden="true"></i>
                         </button>
                         <button class="btn btn-danger" (click)="deletegenero(group.idGenero)"> <i class="fa fa-trash"
@@ -33,7 +33,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content ">
             <div class="modal-header">
-                <h4 class="modal-title align-center">Add Genero Details</h4>
+                <h4 class="modal-title align-center">Genero Details</h4>
                 <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
             </div>
             <div class="modal-body">
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Add Genero</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Add Genero</button>
                 </form>
             </div>
         </div>
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Update</button>
                 </form>
             </div>
         </div>
