--- a/src/app/components/tables/table-reparto-role/table-reparto-role.component.html
+++ b/src/app/components/tables/table-reparto-role/table-reparto-role.component.html
@@ -1,5 +1,5 @@
 <div class="p-4">
-    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnew()">Add New Row</button>
+    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnew()">Add Row</button>
     <!--Datatable with Serie-Reparto Details-->
     <div class="table-responsive">
         <table class="table table-striped table-sm text-center" id="datatable">
@@ -15,7 +15,7 @@
                     <td scope="row">{{group.repartoIdReparto}}</td>
                     <td scope="row">{{group.roleIdRole}}</td>
                     <td class="justify-content-around d-flex">
-                        <button class="btn btn-warning" (click)="edit(group.repartoIdReparto, group.roleIdRole)"> <i class="fa fa-pencil"
+                        <button class="btn btn-success" (click)="edit(group.repartoIdReparto, group.roleIdRole)"> <i class="fa fa-pencil"
                                 aria-hidden="true"></i>
                         </button>
                         <button class="btn btn-danger" (click)="delete(group.repartoIdReparto, group.roleIdRole)"> <i class="fa fa-trash"
@@ -33,7 +33,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content ">
             <div class="modal-header">
-                <h4 class="modal-title align-center">Add Reparto-Role Details</h4>
+                <h4 class="modal-title align-center">Reparto-Role Details</h4>
                 <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
             </div>
             <div class="modal-body">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Add Row</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Add Row</button>
                 </form>
             </div>
         </div>
@@ -70,7 +70,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title align-center">Edit : Serie - {{seriegenerodata.serieID}} | Reparto - {{seriegenerodata.repartoID}}</h4>
+                <h4 class="modal-title align-center">Edit : Serie - {{seriegenerodata.serieIdSerie}} | Reparto - {{seriegenerodata.repartoIdReparto}}</h4>
                 <button type="button" class="btn btn-danger close" (click)="editClose()">Close</button>
             </div>
             <div class="modal-body">
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Update</button>
                 </form>
             </div>
         </div>
