--- a/src/app/components/tables/table-serie/table-serie.component.html
+++ b/src/app/components/tables/table-serie/table-serie.component.html
@@ -1,5 +1,5 @@
 <div class="p-4">
-    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnew()">Add New Serie</button>
+    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnew()">Add Row</button>
     <!--Datatable with Review Details-->
     <div class="table-responsive">
         <table class="table table-striped table-sm text-center" id="datatable">
@@ -23,7 +23,7 @@
                     <td>{{group.sinopsis}}</td>
                     <td>{{group.trailer}}</td>
                     <td class="justify-content-around d-flex">
-                        <button class="btn btn-warning" (click)="edit(group.idSerie)"> <i class="fa fa-pencil"
+                        <button class="btn btn-success" (click)="edit(group.idSerie)"> <i class="fa fa-pencil"
                                 aria-hidden="true"></i>
                         </button>
                         <button class="btn btn-danger" (click)="deleteserie(group.idSerie)"> <i class="fa fa-trash"
@@ -41,7 +41,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content ">
             <div class="modal-header">
-                <h4 class="modal-title align-center">Add Serie Details</h4>
+                <h4 class="modal-title align-center">Serie Details</h4>
                 <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
             </div>
             <div class="modal-body">
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Add Serie</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Add Serie</button>
                 </form>
             </div>
         </div>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Update</button>
                 </form>
             </div>
         </div>
