--- a/src/app/components/tables/table-usuario/table-usuario.component.html
+++ b/src/app/components/tables/table-usuario/table-usuario.component.html
@@ -1,5 +1,5 @@
 <div class="p-4">
-    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnewuser()">Add New User</button>
+    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnewuser()">Add Row</button>
     <!--Datatable with User Details-->
     <div class="table-responsive">
         <table class="table table-striped table-sm text-center" id="datatable">
@@ -21,7 +21,7 @@
                     <td>{{group.email}}</td>
                     <td>{{group.tipo}}</td>
                     <td class="justify-content-around d-flex">
-                        <button class="btn btn-warning" (click)="edituser(group.idUsuario)"> <i
+                        <button class="btn btn-success" (click)="edituser(group.idUsuario)"> <i
                                 class="fa fa-pencil" aria-hidden="true"></i>
                         </button>
                         <button class="btn btn-danger" (click)="deleteuser(group.idUsuario)"> <i class="fa fa-trash"
@@ -39,7 +39,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content ">
             <div class="modal-header">
-                <h4 class="modal-title align-center">Add User Details</h4>
+                <h4 class="modal-title align-center">User Details</h4>
                 <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
             </div>
             <div class="modal-body">
@@ -75,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Add User</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Add User</button>
                 </form>
             </div>
         </div>
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
+                    <button type="submit" class="btn btn-warning w-100 mt-3">Update</button>
                 </form>
             </div>
         </div>
