--- a/src/app/components/tables/table-serie/table-serie.component.html
+++ b/src/app/components/tables/table-serie/table-serie.component.html
@@ -1,5 +1,8 @@
 <div class="p-4">
-    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnew()">Add Row</button>
+    <div class="d-flex align-items-center">
+        <button class="btn btn-warning text-black my-3" (click)="addnew()">Add Row</button>
+    <button class="btn btn-warning text-black my-3 ms-auto" (click)="generateBBDD()" disabled>Generate Series</button>
+    </div>
     <!--Datatable with Review Details-->
     <div class="table-responsive">
         <table class="table table-striped table-sm text-center" id="datatable">
