Fix columns crud tables

--- a/src/app/components/tables/table-role/table-role.component.html
+++ b/src/app/components/tables/table-role/table-role.component.html
@@ -12,8 +12,8 @@
             </thead>
             <tbody>
                 <tr *ngFor="let group of data">
-                    <td scope="row">{{group.idRole}}</td>
-                    <td>{{group.nombre}}</td>
+                    <td >{{group.idRole}}</td>
+                    <td >{{group.nombre}}</td>
                     <td class="justify-content-around d-flex">
                         <button class="btn btn-success" (click)="editrole(group.idRole)" disabled> <i
                                 class="fa fa-pencil" aria-hidden="true"></i>
