--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 /****************************************************/
+
+body{
+    font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important ;
+}
