add show/hide password

--- a/src/app/components/tables/table-serie/table-serie.component.html
+++ b/src/app/components/tables/table-serie/table-serie.component.html
@@ -1,7 +1,7 @@
 <div class="p-4">
     <div class="d-flex align-items-center">
         <button class="btn btn-warning text-black my-3" (click)="addnew()">Add Row</button>
-    <button class="btn btn-warning text-black my-3 ms-auto" (click)="generateBBDD()" disabled>Generate Series</button>
+    <button class="btn btn-warning text-black my-3 ms-auto" (click)="generateBBDD()">Generate Series</button>
     </div>
     <!--Datatable with Review Details-->
     <div class="table-responsive">
