--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -39,3 +39,8 @@
     border-color: rgb(255, 165, 0);
     box-shadow: 0 0 0 0.25rem rgb(255 165 0 / 25%);
 }
+
+.fa-eye-slash:hover,
+.fa-eye:hover {
+  cursor: pointer;
+}
