--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,8 +15,16 @@
                 </div>
                 <div class="form-group my-3">
                     <label for="password">Password</label>
-                    <input type="password" formControlName="password" class="form-control"
-                        [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                    <div class="input-group">
+                        <input [type]="fieldTextType ? 'text' : 'password'" formControlName="password"
+                            class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                        <span class="input-group-text bg-dark border-warning text-white">
+                            <i class="fa" [ngClass]="{
+                                  'fa-eye-slash': !fieldTextType,
+                                  'fa-eye': fieldTextType
+                                }" (click)="toggleFieldTextType()"></i>
+                        </span>
+                    </div>
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required</div>
                         <div *ngIf="f.password.errors.pattern">At least 1 number, 1 Uppercase letter, 1 Lowercase
