--- a/src/app/components/myinfo/myinfo.component.html
+++ b/src/app/components/myinfo/myinfo.component.html
@@ -2,7 +2,7 @@
 <main class="bg-dark">
     <div class="container bg-white min-vh-100 p-5 align-items-center d-flex flex-column">
         <h1 class="mt-5">My Information</h1>
-        <div class="col-md-6 mx-auto ">
+        <div class="col-12 col-lg-8 mx-auto ">
             <form [formGroup]="infoForm" (ngSubmit)="onSubmitInfo()">
                 <div class="row">
                     <div class="form-group col-md-6 ">
@@ -27,23 +27,39 @@
                 <button type="submit" class="btn btn-outline-dark w-100 mt-3">Update Information</button>
             </form>
         </div>
-        <div class="col-md-6 mx-auto mb-auto mt-5">
+        <div class="col-12 col-lg-8 mx-auto mb-auto mt-5">
             <form [formGroup]="passForm" (ngSubmit)="onSubmitPass()">
                 <div class="row">
-                    <div class="form-group col-sm-6">
+                    <div class="form-group col-md-6">
                         <label for="pass">Password</label>
-                        <input type="password" formControlName="pass" class="form-control" placeholder="******"
+                        <div class="input-group">
+                            <input [type]="fieldTextType ? 'text' : 'password'" formControlName="pass" class="form-control" placeholder="******"
                             [ngClass]="{ 'is-invalid': submittedPass && p.pass.errors }" />
+                            <span class="input-group-text bg-dark border-warning text-white">
+                                <i class="fa" [ngClass]="{
+                                      'fa-eye-slash': !fieldTextType,
+                                      'fa-eye': fieldTextType
+                                    }" (click)="toggleFieldTextType()"></i>
+                            </span>
+                        </div>
                         <div *ngIf="submittedPass && p.pass.errors" class="invalid-feedback">
                             <div *ngIf="p.pass.errors.required">Password is required</div>
                             <div *ngIf="p.pass.errors.pattern">At least 1 number, 1 Uppercase letter, 1
                                 Lowercase letter and min 8 letters</div>
                         </div>
                     </div>
-                    <div class="form-group col-sm-6">
+                    <div class="form-group col-md-6">
                         <label for="confirm">Confirm Password</label>
-                        <input type="password" formControlName="confirm" class="form-control" placeholder="******"
+                        <div class="input-group">
+                            <input [type]="fieldConfirmType ? 'text' : 'password'" formControlName="confirm" class="form-control" placeholder="******"
                             [ngClass]="{ 'is-invalid': submittedPass && p.confirm.errors }" />
+                            <span class="input-group-text bg-dark border-warning text-white">
+                                <i class="fa" [ngClass]="{
+                                      'fa-eye-slash': !fieldConfirmType,
+                                      'fa-eye': fieldConfirmType
+                                    }" (click)="toggleFieldConfirmType()"></i>
+                            </span>
+                        </div>
                         <div *ngIf="submittedPass && p.confirm.errors" class="invalid-feedback">
                             <div *ngIf="p.confirm.errors.required">Password is required</div>
                             <div *ngIf="p.confirm.errors.pattern">At least 1 number, 1 Uppercase letter, 1
