--- a/src/app/components/tables/table-usuario/table-usuario.component.html
+++ b/src/app/components/tables/table-usuario/table-usuario.component.html
@@ -21,8 +21,8 @@
                     <td>{{group.email}}</td>
                     <td>{{group.tipo}}</td>
                     <td class="justify-content-around d-flex">
-                        <button class="btn btn-success" (click)="edituser(group.idUsuario)"> <i
-                                class="fa fa-pencil" aria-hidden="true"></i>
+                        <button class="btn btn-success" (click)="edituser(group.idUsuario)"> <i class="fa fa-pencil"
+                                aria-hidden="true"></i>
                         </button>
                         <button class="btn btn-danger" (click)="deleteuser(group.idUsuario)"> <i class="fa fa-trash"
                                 aria-hidden="true"></i>
@@ -66,8 +66,18 @@
                         </div>
                         <div class="form-group col-sm-12">
                             <label for="pass">Password</label>
-                            <input type="password" formControlName="pass" class="form-control" placeholder="******"
-                                [ngClass]="{ 'is-invalid': submitted && f.pass.errors }" />
+                            <div class="input-group">
+                                <input [type]="fieldTextType ? 'text' : 'password'" formControlName="pass"
+                                    class="form-control" placeholder="******"
+                                    [ngClass]="{ 'is-invalid': submitted && f.pass.errors }" />
+                                <span class="input-group-text bg-dark border-warning text-white">
+                                    <i class="fa" [ngClass]="{
+                                          'fa-eye-slash': !fieldTextType,
+                                          'fa-eye': fieldTextType
+                                        }" (click)="toggleFieldTextType()"></i>
+                                </span>
+                            </div>
+
                             <div *ngIf="submitted && f.pass.errors" class="invalid-feedback">
                                 <div *ngIf="f.pass.errors.required">Email is required</div>
                                 <div *ngIf="f.pass.errors.pattern">At least 1 number, 1 Uppercase letter, 1
