--- a/src/app/components/tables/table-serie-reparto/table-serie-reparto.component.html
+++ b/src/app/components/tables/table-serie-reparto/table-serie-reparto.component.html
@@ -15,11 +15,11 @@
                     <td scope="row">{{group.serieIdSerie}}</td>
                     <td scope="row">{{group.repartoIdReparto}}</td>
                     <td class="justify-content-around d-flex">
-                        <button class="btn btn-success" (click)="edit(group.serieIdSerie, group.repartoIdReparto)"> <i class="fa fa-pencil"
-                                aria-hidden="true"></i>
+                        <button class="btn btn-success" (click)="edit(group.serieIdSerie, group.repartoIdReparto)"> <i
+                                class="fa fa-pencil" aria-hidden="true"></i>
                         </button>
-                        <button class="btn btn-danger" (click)="delete(group.serieIdSerie, group.repartoIdReparto)"> <i class="fa fa-trash"
-                                aria-hidden="true"></i>
+                        <button class="btn btn-danger" (click)="delete(group.serieIdSerie, group.repartoIdReparto)"> <i
+                                class="fa fa-trash" aria-hidden="true"></i>
                         </button>
                     </td>
                 </tr>
@@ -70,7 +70,8 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title align-center">Edit : Serie - {{seriegenerodata.serieIdSerie}} | Reparto - {{seriegenerodata.generoIdGenero}}</h4>
+                <h4 class="modal-title align-center">Edit : Serie - {{seriegenerodata.serieIdSerie}} | Reparto -
+                    {{seriegenerodata.generoIdGenero}}</h4>
                 <button type="button" class="btn btn-danger close" (click)="editClose()">Close</button>
             </div>
             <div class="modal-body">
