--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,10 +7,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <div class="flex-grow-1 d-flex flex-column position-relative ms-0 ms-md-5">
-                <!--d-flex input-group w-auto mt-3 ms-auto mt-md-0 mb-md-0
-                    <input type="search" class="form-control" placeholder="Search something..." aria-label="Search" />
-                <button class="btn btn-outline-primary" type="button" data-mdb-ripple-color="dark">
-                    <i class="fa fa-search" aria-hidden="true"></i> </button>-->
                 <app-search (search)="handleSearch($event)" class="mt-3 mb-3 mt-md-0 mb-md-0"></app-search>
                 <div class="position-absolute d-flex flex-column w-100 custom-search rounded">
                     <a class="pt-3 pb-3 ps-5 m-0 text-white text-decoration-none bg-dark"
@@ -24,9 +20,12 @@
                 <button type="button" class="btn btn-warning btn-theme ripple" routerLink="/register"> Sign up </button>
             </div>
             <div class="form-inline nav-item ms-md-3 d-flex" *ngIf="token">
-                <button type="button" class="btn btn-warning btn-theme ripple me-3" routerLink="/management" *ngIf="isAdmin"> Management </button>
-                <button type="button" class="btn btn-warning btn-theme ripple" (click)="logout()" *ngIf="isInfo"> Logout </button>
-                <button type="button" class="btn btn-warning btn-theme ripple" routerLink="/myinfo" *ngIf="!isInfo"> MyInfo </button>
+                <button type="button" class="btn btn-warning btn-theme ripple me-3" routerLink="/management"
+                    *ngIf="isAdmin"> Management </button>
+                <button type="button" class="btn btn-warning btn-theme ripple" (click)="logout()" *ngIf="isInfo"> Logout
+                </button>
+                <button type="button" class="btn btn-warning btn-theme ripple" routerLink="/myinfo" *ngIf="!isInfo">
+                    MyInfo </button>
             </div>
         </div>
     </div>
