--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -40,7 +40,6 @@
     box-shadow: 0 0 0 0.25rem rgb(255 165 0 / 25%);
 }
 
-.fa-eye-slash:hover,
-.fa-eye:hover {
-  cursor: pointer;
+.fa-eye-slash:hover, .fa-eye:hover {
+    cursor: pointer;
 }
