--- a/src/app/components/tables/table-serie-genero/table-serie-genero.component.html
+++ b/src/app/components/tables/table-serie-genero/table-serie-genero.component.html
@@ -15,11 +15,13 @@
                     <td scope="row">{{group.serieIdSerie}}</td>
                     <td scope="row">{{group.generoIdGenero}}</td>
                     <td class="justify-content-around d-flex">
-                        <button class="btn btn-success" (click)="editseriegenero(group.serieIdSerie, group.generoIdGenero)"> <i class="fa fa-pencil"
+                        <button class="btn btn-success"
+                            (click)="editseriegenero(group.serieIdSerie, group.generoIdGenero)"> <i class="fa fa-pencil"
                                 aria-hidden="true"></i>
                         </button>
-                        <button class="btn btn-danger" (click)="deleteseriegenero(group.serieIdSerie, group.generoIdGenero)"> <i class="fa fa-trash"
-                                aria-hidden="true"></i>
+                        <button class="btn btn-danger"
+                            (click)="deleteseriegenero(group.serieIdSerie, group.generoIdGenero)"> <i
+                                class="fa fa-trash" aria-hidden="true"></i>
                         </button>
                     </td>
                 </tr>
@@ -70,7 +72,8 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title align-center">Edit : Serie - {{seriegenerodata.serieIdSerie}} | Genero - {{seriegenerodata.generoIdGenero}}</h4>
+                <h4 class="modal-title align-center">Edit : Serie - {{seriegenerodata.serieIdSerie}} | Genero -
+                    {{seriegenerodata.generoIdGenero}}</h4>
                 <button type="button" class="btn btn-danger close" (click)="editClose()">Close</button>
             </div>
             <div class="modal-body">
